--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.1.0",
   "description": "A search box for Vue applications.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "repository": {},
+  "scripts": {},
   "author": "Mathis Lucka",
   "license": "MIT",
   "devDependencies": {
     "rollup": "^2.14.0",
+    "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11"
-  },
-  "dependencies": {
-    "rollup-plugin-vue": "^5.1.9"
   }
 }
