--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "vue-omnibox",
   "version": "0.1.0",
   "description": "A search box for Vue applications.",
-  "main": "index.js",
+  "main": "index.esm.min.js",
   "repository": {},
-  "scripts": {},
+  "scripts": {
+    "build": "rollup --config rollup.config.js"
+  },
   "author": "Mathis Lucka",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "acorn": "^7.2.0",
     "rollup": "^2.14.0",
+    "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-vue": "^5.1.9",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11"
